updated assets and layout

--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 </head>
 
 <body>
-    <img class="background-img" src="./assets/background.svg" alt="">
     <div class="container">
+        <svg version="1.2" baseProfile="tiny" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1599.3 869.2" xml:space="preserve" class="background-img">
+            <title>background</title>
+            <path fill="#5C6AC4" d="M1278.6,869.2c124.1,0,278.8-185.9,320.7-185.9V0H0v723.1c0,0,79.9,29.6,163.4,29.6s394.2-60.2,555.6-60.2
+	C930.4,692.5,1108.6,869.2,1278.6,869.2z" />
+        </svg>
         <div class="row mt-4 text-white">
             <div class="col d-flex flex-row justify-content-center mb-4">
                 <i class="fab fa-shopify"></i>
-                <h6>shopify</h6>
+                <h6><i>shopify</i></h6>
             </div>
         </div>
         <div class="row">
@@ -23,27 +27,24 @@
                 <h1>Sell online with Shopify</h1>
                 <h4>Trusted by over 800,000 businesses worldwide</h4>
                 <form class="d-flex justify-content-center form-width">
-                    <div class="form-row align-items-center my-3 w-sutom-1">
+                    <div class="form-row align-items-center w-custom-1">
                         <div class="my-1 w-custom-2">
                             <input type="text" class="form-control mr-2 w-100" id="inlineFormInputName" placeholder="Enter your email adress">
                         </div>
                         <div class="my-1 ml-2 w-custom-3">
-                            <button type="submit" class="btn btn-dark w-100">Submit</button>
+                            <button type="submit" class="btn btn-dark w-100">Start your free tiral</button>
                         </div>
                     </div>
                 </form>
-                <p><small>Try Shopify free for 14 days, no credit card required. By entering your email, you agree to receive marketing emails from Shopify.</small></p>
+                <p class="text-center"><small>Try Shopify free for 14 days, no credit card required. By entering your email, you agree to receive <br> marketing emails from Shopify.</small></p>
             </div>
         </div>
         <div class="row">
-            <div class="col d-flex flex-row justify-content-center">
-                <img class="image-front" src="./assets/2741842.svg" alt="">
+            <div class="col d-flex flex-row justify-content-center mb-5">
+                <img class="image-front" src="./assets/1.png" alt="">
             </div>
         </div>
-        <div class="row">
-            <div class="col d-flex flex-row justify-content-center"></div>
-        </div>
-        <div class="row mx-8 d-flex flex-row justify-content-cneter my-5">
+        <div class="row mx-8 d-flex flex-row justify-content-cneter my-5 m-auto w-75">
             <div class="col">
                 <div class="sub-section">
                     <i class="fas fa-mobile-alt text-main fa-2x"></i>
@@ -66,33 +67,33 @@
                 </div>
             </div>
         </div>
-        <div class="row d-flex flex-row justify-content-center py-4 my-5 to-place">
-            <div class="col-1">
-                <img src="./assets/LOGO-01.svg" alt="">
+        <div class="row d-flex flex-row justify-content-between py-4 my-5 m-auto to-place px-0 w-75">
+            <div class="col-1 px-0">
+                <img src="./assets/clients/1.png" class="clients">
             </div>
-            <div class="col-1">
-                <img src="./assets/LOGO-02.svg" alt="">
+            <div class="col-1 px-0">
+                <img src="./assets/clients/2.png" class="clients">
             </div>
-            <div class="col-1">
-                <img src="./assets/LOGO-03.svg" alt="">
+            <div class="col-1 px-0">
+                <img src="./assets/clients/3.png" class="clients">
             </div>
-            <div class="col-1">
-                <img src="./assets/LOGO-04.svg" alt="">
+            <div class="col-1 px-0">
+                <img src="./assets/clients/4.png" class="clients">
             </div>
-            <div class="col-1">
-                <img src="./assets/LOGO-05.svg" alt="">
+            <div class="col-1 px-0">
+                <img src="./assets/clients/5.png" class="clients">
             </div>
-            <div class="col-1">
-                <img src="./assets/LOGO-06.svg" alt="">
+            <div class="col-1 px-0">
+                <img src="./assets/clients/6.png" class="clients">
             </div>
-            <div class="col-1">
-                <img src="./assets/LOGO-07.svg" alt="">
+            <div class="col-1 px-0">
+                <img src="./assets/clients/7.png" class="clients">
             </div>
-            <div class="col-1">
-                <img src="./assets/LOGO-08.svg" alt="">
+            <div class="col-1 px-0">
+                <img src="./assets/clients/8.png" class="clients">
             </div>
-            <div class="col-1">
-                <img src="./assets/LOGO-09.svg" alt="">
+            <div class="col-1 px-0">
+                <img src="./assets/clients/9.png" class="clients">
             </div>
         </div>
         <div class="row d-flex justify-content-center my-5">
